# src/routes/index.js
@@ -1,11 +1,13 @@
 import { Router } from 'express';
 
 import authRoutes from './auth.routes.js';
+import categoryRoutes from './category.routes.js';
 import userRoutes from './user.routes.js';
 
 const router = Router();
 
-router.use('/users', userRoutes);
 router.use('/auth', authRoutes);
+router.use('/categories', categoryRoutes);
+router.use('/users', userRoutes);
 
 export default router;
