# src/swagger/swagger-output.yaml
@@ -170,3 +170,105 @@ paths:
       responses:
         '200':
           description: Current user retrieved successfully
+  /api/categories:
+    post:
+      summary: Create a new category
+      description: Creates a new category with title.
+      tags:
+        - Categories
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - title
+              properties:
+                title:
+                  type: string
+                  required: true
+                description:
+                  type: string
+                  required: false
+      responses:
+        '201':
+          description: Category created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+    get:
+      summary: Get all categories
+      description: Returns a list of all categories.
+      tags:
+        - Categories
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of categories
+  '/api/categories/{id}':
+    get:
+      summary: Get a category by ID
+      description: Returns a category by ID.
+      tags:
+        - Categories
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Category
+    put:
+      summary: Update an existing category
+      description: Updates an existing category with title and description.
+      tags:
+        - Categories
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  required: false
+                description:
+                  type: string
+                  required: false
+      responses:
+        '200':
+          description: Category updated successfully
+    delete:
+      summary: Delete a category
+      description: Deletes a category by ID.
+      tags:
+        - Categories
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Category deleted successfully
